kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: klaraworks-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: klaraworks-app
  template:
    metadata:
      labels:
        app: klaraworks-app
    spec:
      containers:
        - name: klaraworks-container
          image: klaraworks-dev-image
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: http
              httpHeaders:
              - name: X-HEALTH-CHECK
                value: Are you still alive?
