kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: klaraworks-service
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    app: klaraworks-app
